--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,34 @@
-click==8.1.7
-colorama==0.4.6
-Flask==2.3.3
-itsdangerous==2.1.2
-Jinja2==3.1.3
-joblib==1.4.0
-MarkupSafe==2.1.5
-matplotlib==3.8.4
-numpy==1.26.4
-opencv-python-headless==4.9.0.80
+blinker==1.9.0
+click==8.0.4
+cmake==4.0.2
+colorama==0.4.4
+contourpy==1.3.2
+cycler==0.11.0
+face-recognition==1.3.0
+face_recognition_models==0.3.0
+Flask==2.0.3
+fonttools==4.30.0
+gunicorn==23.0.0
+itsdangerous==2.1.1
+Jinja2==3.0.3
+joblib==1.1.0
+kiwisolver==1.3.2
+MarkupSafe==2.1.0
+matplotlib==3.5.1
+numpy==1.22.3
+opencv-python==4.11.0.86
+opencv-python-headless==4.5.5.64
+packaging==21.3
+pandas==1.4.1
+Pillow==9.0.1
+pyparsing==3.0.7
+python-dateutil==2.8.2
+pytz==2021.3
+scikit-learn==1.0.2
+scipy==1.8.0
+seaborn==0.11.2
+six==1.16.0
+threadpoolctl==3.1.0
+unicorn==1.0.3
+Werkzeug==2.0.3
 gunicorn
