--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cmake==4.0.2
 colorama==0.4.4
 contourpy==1.3.2
 cycler==0.11.0
+dlib @ file:///E:\AI_App\FaceRecongnition\Class\Module-5\dlib-19.22.99-cp310-cp310-win_amd64.whl
 face-recognition==1.3.0
 face_recognition_models==0.3.0
 Flask==2.0.3
@@ -31,4 +32,3 @@ six==1.16.0
 threadpoolctl==3.1.0
 unicorn==1.0.3
 Werkzeug==2.0.3
-gunicorn
