--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ cmake==4.0.2
 colorama==0.4.4
 contourpy==1.0.6
 cycler==0.11.0
-Flask==2.0.3
+flask==2.0.1
 fonttools==4.30.0
 scikit-learn==1.0.2
-gunicorn==23.0.0
+gunicorn==20.1.0
 itsdangerous==2.1.1
 Jinja2==3.0.3
 joblib==1.1.0
